<resources>
    <string name="app_name">homework_8</string>
    <string name="add_button">add button</string>
    <string name="title_first_name">Firstname:</string>
    <string name="title_last_name">Lastname:</string>
    <string name="empty">-</string>
    <string name="title_email">Email:</string>
    <string name="firstname">FirstName</string>
    <string name="lastname">LastName</string>
    <string name="email">Email</string>
    <string name="update_user">Update User</string>
</resources>