<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp"
    tools:context=".UserActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="36sp"
        android:layout_marginBottom="40dp"
        android:text="@string/update_user"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/firstname"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck,VisualLintTextFieldSize" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/lastname"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck,VisualLintTextFieldSize" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/email"
        tools:ignore="TouchTargetSizeCheck,VisualLintTextFieldSize" />


    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/bUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/yellow"
        android:src="@drawable/ic_plus"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck,ImageContrastCheck" />




</androidx.appcompat.widget.LinearLayoutCompat>