<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/card_display"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="20dp"
    android:paddingBottom="20dp">


    <TextView
        android:id="@+id/titleFirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_first_name"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/firstName"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/firstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/empty"
        app:layout_constraintLeft_toRightOf="@id/titleFirstName"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_last_name"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleFirstName"/>

    <TextView
        android:id="@+id/lastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        app:layout_constraintLeft_toRightOf="@+id/titleLastName"
        app:layout_constraintTop_toBottomOf="@+id/firstName"/>

    <TextView
        android:id="@+id/titleEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_email"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleLastName"/>

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        app:layout_constraintLeft_toRightOf="@+id/titleEmail"
        app:layout_constraintTop_toBottomOf="@+id/lastName"/>


    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/bRemove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/red"
        android:src="@drawable/ic_remove"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/yellow"
        android:src="@drawable/ic_update"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bRemove"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>